implement POST v1/user endpoint
