# api.yml
@@ -17,42 +17,67 @@ info:
 servers:
   - url: http://localhost
 paths:
-  /hello:
-    get:
-      summary: This is just a test endpoint to get you started. Please delete this endpoint.
-      operationId: hello
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
+  /v1/user:
+    post:
+      operationId: RegisterUser
+      summary: Create a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
       responses:
-        '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
-        '404':
-          description: Not found
+        '201':
+          description: User created successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: '#/components/schemas/RegisterUserResponse'
+        '400':
+          description: Bad request - Invalid input
+        '500':
+          description: Internal server error
 components:
   schemas:
-    HelloResponse:
+    RegisterUserResponse:
       type: object
-      required:
-        - message
       properties:
-        message:
-          type: string
-    ErrorResponse:
+        header:
+          $ref: '#/components/schemas/ResponseHeader'
+        user:
+          $ref: '#/components/schemas/User'
+      required:
+        - header
+        - user
+    ResponseHeader:
       type: object
-      required:
-        - message
       properties:
-        message:
+        success:
+          type: boolean
+          description: Placeholder description.
+        messages:
+          description: Placeholder description.
+          type: array
+          items:
+            type: string
+      required:
+        - success
+        - messages
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        phone_number:
           type: string
+          description: Placeholder description.
+        full_name:
+          type: string
+          description: Placeholder description.
+        password:
+          type: string
+          description: Placeholder description.
+      required:
+        - id
